# glibc-stubs-generator

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  main.zig
.github/workflows/: build.yaml  release.yaml
